--- a/public/commands.html
+++ b/public/commands.html
@@ -82,6 +82,10 @@
 				<span>quotes:</span>
                 Provides a link to the quote page of the current room.
             </p>
+			<p class="helptopic">
+				<span>randquote:</span>
+				Says a random quote from the quote page of the current room.
+			</p>
         </div>
         <div>
             <h2 id="userlist">Userlist:</h2>
