Add a motd feature

--- a/public/commands.html
+++ b/public/commands.html
@@ -87,6 +87,23 @@
 				Says a random quote from the quote page of the current room.
 			</p>
         </div>
+
+		<div>
+            <h2 id="social">Social:</h2>
+            <p class="helptopic">
+				<span>motd:</span>
+                Displays the current message of the day for the room. This command can be used in PM by specifying the room after the command.
+            </p>
+            <p class="helptopic">
+				<span>motd (motd):</span>
+                Sets the message of the day in the room to the specified message for the next 24 hours. Requires Room Moderator in the room.
+            </p>
+			<p class="helptopic">
+				<span>clearmotd:</span>
+				Clears the current motd of the room. Requires Room Moderator in the room.
+			</p>
+        </div>
+
         <div>
             <h2 id="userlist">Userlist:</h2>
             <p class="helptopic">
