--- a/public/commands.html
+++ b/public/commands.html
@@ -45,6 +45,14 @@
                 Links to the bot's documentation about a certain topic. For a list of topics, use .help without a topic
                 specified.
             </p>
+			<p class="helptopic">
+				<span>git:</span>
+				Returns a link to Kid A's github repository.
+			</p>
+			<p class="helptopic">
+				<span>data:</span>
+				Returns a link to the page with chat analytics of the current room.
+			</p>
         </div>
         <div>
             <h2 id="LastFm">Last.fm:</h2>
