--- a/public/wifi.html
+++ b/public/wifi.html
@@ -51,7 +51,7 @@
 				Updates the information of a trainer. Possible values for keys are: <strong>fc, ign, notes</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Trainers can update their own info, and Room Moderators can edit any cloner's info.
 			</p>
 			<p class="helptopic">
-				<span>evadd (username):</span>
+				<span>traineractivity (username):</span>
 				Approves a trainer's monthly EV training, and updates the date on the list. Requires Room Moderator.
 			</p>
 			<p class="helptopic">
