--- a/public/wifi.html
+++ b/public/wifi.html
@@ -63,7 +63,7 @@
 		<div>
 			<h2 id="scammers">Scammer list:</h2>
 			<p class="helptopic">
-				<span>addscammer (main, alts, fc, ign, evidence, reason, status):</span>
+				<span>addscammer (main, alts, fc, ign, evidence, reason):</span>
 				Adds a scammer to the scammer list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
 			</p>
 			<p class="helptopic">
@@ -72,7 +72,7 @@
 			</p>
 			<p class="helptopic">
 				<span>updatescammer (username, [key: value, key: value]):</span>
-				Updates the information of a scammer. Possible values for keys are: <strong>alts, fc, ign, evidence, reason, status, addedby</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Room Moderators can edit any scammer's info.
+				Updates the information of a scammer. Possible values for keys are: <strong>alts, fc, ign, evidence, reason, addedby</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Room Moderators can edit any scammer's info.
 			</p>
 			<p class="helptopic">
 				<span>addscammeralt (username, alt1[, alt2, alt3...]):</span>
