--- a/public/wifi.html
+++ b/public/wifi.html
@@ -34,6 +34,10 @@
 				<span>purgecloners:</span>
 				Removes all cloners from the list that haven't done a giveaway in the past 30 days. Requires Room Owner.
 			</p>
+			<p class="helptopic">
+				<span>whitelistcloner (username):</span>
+				Adds the given user to the cloner whitelist, allowing them to use cloner commands. Requires Room Owner.
+			</p>
         </div>
 
 		<div>
@@ -57,6 +61,10 @@
 			<p class="helptopic">
 				<span>purgetrainers:</span>
 				Removes all trainers from the list that haven't done a giveaway in the past 30 days. Requires Room Owner.
+			</p>
+			<p class="helptopic">
+				<span>whitelisttrainer (username):</span>
+				Adds the given user to the trainer whitelist, allowing them to use trainer commands. Requires Room Owner.
 			</p>
 		</div>
 
