--- a/public/commands.html
+++ b/public/commands.html
@@ -59,6 +59,7 @@
                 a
                 link to their profile.
                 If no username is provided, it will attempt to use your registered info.
+				Options: lastfmhtmlbox - Uses a fancier htmlbox for displaying results. Requires the bot to have the bot rank, and is spammier.
             </p>
             <p class="helptopic">
 				<span>registerlastfm (username):</span>
