--- a/public/commands.html
+++ b/public/commands.html
@@ -61,6 +61,11 @@
                 If no username is provided, it will attempt to use your registered info.
 				Options: lastfmhtmlbox - Uses a fancier htmlbox for displaying results. Requires the bot to have the bot rank, and is spammier.
             </p>
+			<p class="helptopic">
+				<span>track (artist - track name):</span>
+				Searches for a track on last.fm, and provides a youtube link to the song as well.
+				Options: lastfmhtmlbox - Uses a fancier htmlbox for displaying results. Requires the bot to have the bot rank, and is spammier.
+			</p>
             <p class="helptopic">
 				<span>registerlastfm (username):</span>
                 Works only in PM. This will register the given last.fm username to your PS username, and allows you to
