Implement .settings and refactor settings entirely

--- a/public/commands.html
+++ b/public/commands.html
@@ -26,8 +26,8 @@
                 or for you to be the owner of the bot.
             </p>
             <p class="helptopic">
-				<span>set (command/option) [on/off]:</span>
-                If supplied with an option, turns that option on or off. If supplied with the name of a command, turns the usage of a command on or off instead. Requires Room Owner in the room.
+				<span>settings:</span>
+                Gives you a link to a webpage where you can turn on and off commands and options for your room. This command can be used in PM, although the name of the room should be supplied as an argument in that case.
             </p>
             <p class="helptopic">
 				<span>leave:</span>
