--- a/public/wifi.html
+++ b/public/wifi.html
@@ -15,7 +15,7 @@
         <div>
             <h2 id="cloners">Cloner list:</h2>
             <p class="helptopic">
-                <span>addcloner (username, ign, fc, notes):</span>
+                <span>addcloner (username, fc, ign, notes):</span>
                 Adds a cloner to the cloner list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Owner or cloner whitelist.
             </p>
             <p class="helptopic">
