Allow all staff to refresh cloners/trainers

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -28,7 +28,7 @@
             </p>
             <p class="helptopic">
 				<span>clonerga (username):</span>
-                Approves a cloner's monthly giveaway, and updates the date on the list. Requires Room Owner or cloner whitelist.
+                Approves a cloner's monthly giveaway, and updates the date on the list. Requires Room Driver or cloner whitelist.
             </p>
 			<p class="helptopic">
 				<span>purgecloners:</span>
@@ -56,7 +56,7 @@
 			</p>
 			<p class="helptopic">
 				<span>traineractivity (username):</span>
-				Approves a trainer's monthly EV training, and updates the date on the list. Requires Room Owner or trainer whitelist.
+				Approves a trainer's monthly EV training, and updates the date on the list. Requires Room Driver or trainer whitelist.
 			</p>
 			<p class="helptopic">
 				<span>purgetrainers:</span>
