--- a/public/wifi.html
+++ b/public/wifi.html
@@ -43,7 +43,7 @@
 		<div>
 			<h2 id="trainers">Trainer list:</h2>
 			<p class="helptopic">
-				<span>addtrainer (username, ign, fc, evs, levels, collateral, notes):</span>
+				<span>addtrainer (username, ign, fc, evs, collateral, notes):</span>
 				Adds a trainer to the trainer list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Owner or trainer whitelist.
 			</p>
 			<p class="helptopic">
