Update command list

--- a/public/commands.html
+++ b/public/commands.html
@@ -61,7 +61,7 @@
             <div>
                 <h2 id="moderation">Moderation:</h2>
                 <p class="helptopic">
-                    <span>moderation [on/off]:</span> Turns moderation in this room on or off. Requires Room Owner in the room.
+                    Use the settings feature to edit settings for bot moderation in the rooms you're Room Owner in.
                 </p>
             </div>
 
