--- a/public/commands.html
+++ b/public/commands.html
@@ -12,7 +12,7 @@
         <div>
             <h1>Kid A's command list:</h1>
 
-            <p class="note"><strong>NOTE:</strong> All command require Voice or above in the current room, unless specified otherwise. Commands that require Voice will still work in PM for regular users.</p>
+            <p class="note"><strong>NOTE:</strong> All commands require Voice or above in the current room, unless specified otherwise. Commands that require Voice will still work in PM for regular users.</p>
 
             <div>
                 <h2 id="administrative">Administrative:</h2>
