Add a hangman plugin

--- a/public/commands.html
+++ b/public/commands.html
@@ -31,6 +31,18 @@
                 </p>
             </div>
             <div>
+                <h2 id="hangman">Hangman:</h2>
+                <p class="helptopic">
+                    <span>addhangman room, solution, hint:</span> Adds a word to the list of possible words for .hangman. Requires Room Moderator.
+                </p>
+                <p class="helptopic">
+                    <span>deletehangman room, word:</span> Deletes a word from list of possible words for .hangman. Requires Room Moderator
+                </p>
+                <p class="helptopic">
+                    <span>hangman:</span> Starts a hangman game with a random solution, selected from the list for this room.
+                </p>
+            </div>
+            <div>
                 <h2 id="help">Help:</h2>
                 <p class="helptopic">
                     <span>help (topic):</span> Links to the bot's documentation about a certain topic. For a list of topics, use .help without a topic specified.
