--- a/public/commands.html
+++ b/public/commands.html
@@ -33,10 +33,10 @@
             <div>
                 <h2 id="hangman">Hangman:</h2>
                 <p class="helptopic">
-                    <span>addhangman room, solution, hint:</span> Adds a word to the list of possible words for .hangman. Requires Room Moderator.
+                    <span>addhangman room, solution, hint:</span> Adds a word to the list of possible words for .hangman. Requires Room Driver.
                 </p>
                 <p class="helptopic">
-                    <span>deletehangman room, word:</span> Deletes a word from list of possible words for .hangman. Requires Room Moderator
+                    <span>deletehangman room, word:</span> Deletes a word from list of possible words for .hangman. Requires Room Driver.
                 </p>
                 <p class="helptopic">
                     <span>hangman:</span> Starts a hangman game with a random solution, selected from the list for this room.
