Add documentation for TSV feature

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -91,6 +91,22 @@
 				Checks if the given FC is on the scammer list.
 			</p>
 		</div>
+
+		<div>
+			<h2 id="tsvs">TSV list:</h2>
+			<p class="helptopic">
+				<span>addtsv (username, tsv):</span>
+				Adds a TSV for a user. Requires Room Driver.
+			</p>
+			<p class="helptopic">
+				<span>deletetsv (username):</span>
+				Removes the TSVs of a user. Requires Room Driver.
+			</p>
+			<p class="helptopic">
+				<span>tsv (esv1[, esv2, esv3, esv4]):</span>
+				Checks for matches in the TSV list for entered ESVs.
+			</p>
+		</div>
     </div>
 </div>
 </body>
