Add more documentation of the FC list

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -88,7 +88,23 @@
 			</p>
 			<p class="helptopic">
 				<span>checkfc (fc):</span>
-				Checks if the given FC is on the scammer list.
+				Checks if the given FC is on the scammer list, on the cloner or trainer list, or if the FC belongs to a user in the room.
+			</p>
+		</div>
+
+		<div>
+			<h2 id="friendcodes">Friend Code list:</h2>
+			<p class="helptopic">
+				<span>addfc (username, friendcode):</span>
+				Adds a Friend Code for a user. Requires Room Driver.
+			</p>
+			<p class="helptopic">
+				<span>deletefc (username):</span>
+				Removes the Friend Code of a user. Requires Room Driver.
+			</p>
+			<p class="helptopic">
+				<span>fc (username):</span>
+				Returns the friend code of the entered user.
 			</p>
 		</div>
 
