--- a/public/intro.html
+++ b/public/intro.html
@@ -10,7 +10,7 @@
     <div>
         <h1>Introduction to Kid A</h1>
         <div>
-            <h2 id="cloners">So I've invited a strange bot into my room:</h2>
+            <h2 id="intro">So I've invited a strange bot into my room:</h2>
             
             <p>
                 Don't be afraid, this bot is (hopefully) relatively harmless. Kid A is a chatbot intended to help manage rooms by providing some administrative tools, moderation help, as well as some social features and chat analytics. It also has a built-in notification syatem the owner can utilize to notify all Room Owners of new features and other important announcements. For a list of commands, use <code>.help commands</code>.
@@ -20,6 +20,9 @@
             </p>
             <p>
                 By default, all bot features will be enabled, with various opt-in options that can be enabled if you wish to use them. The bot moderates on bold abuse, stretching, caps and flooding. Bot moderation starts with verbal warnings, and will move to more severe punishments for repeat offenders. To disable (parts of) bot moderation, or want to disable other commands/features, use <code>.settings</code> (or <code>.settings roomname</code> in PM to the bot) to change the settings.
+            </p>
+            <p>
+                If you wish your room to be private, meaning you cannot access quote and data pages without being in the room itself, use <code>.privateroom</code>. To turn this privacy feature off, run the command again to toggle it.
             </p>
         </div>
     </div>
