--- a/public/wifi.html
+++ b/public/wifi.html
@@ -74,7 +74,7 @@
 				The identifier for editing and deleting hacked mons is <code>species-day-month-year</code>. Use this in <code>.removehackmon</code> and <code>updatehackmon</code>. It is not needed for adding mons.
 			</p>
 			<p class="helptopic">
-				<span>addhackmon (species, ot, tid, details, reasoning):</span>
+				<span>addhackmon (species, ot, tid, details, reasoning, notes):</span>
 				Adds a hackmon to the hacked mons list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
 			</p>
 			<p class="helptopic">
@@ -83,7 +83,7 @@
 			</p>
 			<p class="helptopic">
 				<span>updatehackmon (identifier, [key: value, key: value]):</span>
-				Updates the information of a hacked mon. Possible values for keys are: <strong>species, ot, tid, details, reasoning</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
+				Updates the information of a hacked mon. Possible values for keys are: <strong>species, ot, tid, details, reasoning, notes</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
 			</p>
 		</div>
 
