--- a/public/intro.html
+++ b/public/intro.html
@@ -12,16 +12,16 @@
         <div>
             <h2 id="intro">So I've invited a strange bot into my room:</h2>
             
-            <p>
+            <p class="body">
                 Don't be afraid, this bot is (hopefully) relatively harmless. Kid A is a chatbot intended to help manage rooms by providing some administrative tools, moderation help, as well as some social features and chat analytics. It also has a built-in notification syatem the owner can utilize to notify all Room Owners of new features and other important announcements. For a list of commands, use <code>.help commands</code>.
             </p>
-            <p>
+            <p class="body">
                 If this was an accident, or you do not want to use the bot anymore, a Room Owner can use <code>.leave</code> in the room at any time to make the bot leave. The bot will not return until it's invited again. Settings and data will be saved however. If you wish to remove this room's data, please contact the bot's owner (bumbadadabum), or whoever is running this fork and forgot to edit this file.
             </p>
-            <p>
+            <p class="body">
                 By default, all bot features will be enabled, with various opt-in options that can be enabled if you wish to use them. The bot moderates on bold abuse, stretching, caps and flooding. Bot moderation starts with verbal warnings, and will move to more severe punishments for repeat offenders. To disable (parts of) bot moderation, or want to disable other commands/features, use <code>.settings</code> (or <code>.settings roomname</code> in PM to the bot) to change the settings.
             </p>
-            <p>
+            <p class="body">
                 If you wish your room to be private, meaning you cannot access quote and data pages without being in the room itself, use <code>.privateroom</code>. To turn this privacy feature off, run the command again to toggle it.
             </p>
         </div>
@@ -29,3 +29,4 @@
 </div>
 </body>
 </html>
+
