Add a score system for cloners

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -42,6 +42,14 @@
 				<span>notifycloners (message):</span>
 				Sets a message that will be sent to all cloners when they log on. Requires Room Owner.
 			</p>
+			<p class="helptopic">
+				<span>cloned (user):</span>
+				Used to confirm your cloning and update the score on the cloners list.
+			</p>
+			<p class="helptopic">
+				<span>clonerlog:</span>
+				Shows the log of all confirmed clonings of the past month. Requires Room Driver.
+			</p>
         </div>
 		
 		<div>
