Move hackmon perm to %

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -79,15 +79,15 @@
 			</p>
 			<p class="helptopic">
 				<span>addhackmon (species, ot, tid, details, reasoning, notes):</span>
-				Adds a hackmon to the hacked mons list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
+				Adds a hackmon to the hacked mons list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Driver.
 			</p>
 			<p class="helptopic">
 				<span>removehackmon (identifier):</span>
-				Removes a hackmon from the list. Requires Room Moderator.
+				Removes a hackmon from the list. Requires Room Driver.
 			</p>
 			<p class="helptopic">
 				<span>updatehackmon (identifier, [key: value, key: value]):</span>
-				Updates the information of a hacked mon. Possible values for keys are: <strong>species, ot, tid, details, reasoning, notes</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Moderator.
+				Updates the information of a hacked mon. Possible values for keys are: <strong>species, ot, tid, details, reasoning, notes</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Driver.
 			</p>
 		</div>
 
