Removed a line I forgot to remove before

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div>
         <h1>Main Page</h1>
-        <div>
+        <div style="float:left;width:60%;">
             <h2 id="intro">What is this website?</h2>
             <p class="body">
                 This website is generated using the webserver contained in the <a href="https://github.com/bumbadadabum/Kid-A">Kid A Pokémon Showdown Chat Bot</a>. While there is no real navigation present on the website itself, a variety of the available pages are linked by the chat bot on Pokémon Showdown itself. Additionally, there will be a few links available at the bottom of the page for a better explanation of the features of the bot, and how it can be used on Pokémon Showdown. If you wish to contact the creator of the website and bot, it's best to reach me on Pokémon Showdown (bumbadadabum).
@@ -20,7 +20,11 @@
                 <li><a href="./commands.html">List of available bot commands.</a></li>
             </ul>
         </div>
+        <div style="float:right;padding:40px;">
+            <img src="logo.png" width="300" height="300">
+        </div>
     </div>
 </div>
-</body>
-</html>
+
+
+</body></html>
